coding part done test cases pending

--- a/loan.SPA/src/app/app.component.html
+++ b/loan.SPA/src/app/app.component.html
@@ -1,3 +1,11 @@
+<ngx-spinner
+  bdColor="rgba(0, 0, 0, 0.8)"
+  size="default"
+  color="#fff"
+  type="square-loader"
+  [fullScreen]="true"
+  ><p style="color: white">Loading...</p></ngx-spinner
+>
 <app-navbar *ngIf="currentUser$ | async"></app-navbar>
 
 <main [ngClass]="(currentUser$ | async) ? 'container' : ''">
