--- a/loan.SPA/src/app/core/navbar/navbar.component.html
+++ b/loan.SPA/src/app/core/navbar/navbar.component.html
@@ -3,7 +3,7 @@
   aria-label="Main navigation"
 >
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">LMS</a>
+    <a class="navbar-brand" [routerLink]="['/home']">LMS</a>
     <button
       class="navbar-toggler p-0 border-0"
       type="button"
@@ -17,15 +17,6 @@
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="#">Dashboard</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Notifications</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Profile</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Switch account</a>
         </li>
       </ul>
       <div class="d-flex">
