--- a/loan.SPA/src/app/home/home.component.html
+++ b/loan.SPA/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="home">
   <!-- Action tab -->
-  <form>
+  <form [formGroup]="searchForm" (ngSubmit)="searchApplications()">
     <div class="home__action">
       <div class="px-3">
         <input
@@ -8,6 +8,7 @@
           class="form-control"
           id="firstName"
           placeholder="First Name"
+          formControlName="firstName"
         />
       </div>
       <div class="px-3">
@@ -15,6 +16,7 @@
           type="text"
           class="form-control"
           id="lastName"
+          formControlName="lastName"
           placeholder="Last Name"
         />
       </div>
@@ -24,6 +26,7 @@
           class="form-control"
           id="loanNumber"
           placeholder="Loan Number"
+          formControlName="loanNumber"
         />
       </div>
       <div class="mb-3">
