--- a/loan.SPA/src/app/home/loan-list/loan-list.component.html
+++ b/loan.SPA/src/app/home/loan-list/loan-list.component.html
@@ -10,15 +10,29 @@
     </tr>
   </thead>
   <tbody>
-    <tr>
-      <td>1</td>
-      <td>Pradeep</td>
-      <td>Test</td>
-      <td>32423</td>
-      <td>32423</td>
+    <tr *ngFor="let item of loanApplications">
+      <td>{{ item.id }}</td>
+      <td>{{ item.firstName }}</td>
+      <td>{{ item.lastName }}</td>
+      <td>{{ item.loanAmount }}</td>
+      <td>{{ item.loanTenure }}</td>
       <td>
-        <button type="button" class="button btn btn-primary">Edit</button>
+        <button
+          class="btn btn-outline-success me-2"
+          [routerLink]="['loan-create', item.id]"
+        >
+          <i class="bi bi-pencil-square"></i>
+        </button>
+        <button (click)="cancel(item.id)" class="btn btn-outline-danger">
+          <i class="bi bi-trash"></i>
+        </button>
       </td>
     </tr>
   </tbody>
 </table>
+<div
+  *ngIf="loanApplications.length === 0"
+  class="w-100 d-flex justify-content-center"
+>
+  <p>No loan applications exists.</p>
+</div>
