front part coding done

--- a/loan.SPA/src/app/core/navbar/navbar.component.html
+++ b/loan.SPA/src/app/core/navbar/navbar.component.html
@@ -19,10 +19,35 @@
           <a class="nav-link active" aria-current="page" href="#">Dashboard</a>
         </li>
       </ul>
-      <div class="d-flex">
-        <button class="btn btn-primary me-3" type="button" (click)="logout()">
-          Logout
-        </button>
+      <div class="d-flex me-2">
+        <div class="btn-group" dropdown>
+          <button
+            id="button-basic"
+            dropdownToggle
+            type="button"
+            class="btn btn-outline-light dropdown-toggle"
+            aria-controls="dropdown-basic"
+          >
+            {{ (currentUser$ | async).displayName }}<span class="caret"></span>
+          </button>
+          <ul
+            id="dropdown-basic"
+            *dropdownMenu
+            class="dropdown-menu"
+            role="menu"
+            aria-labelledby="button-basic"
+          >
+            <li role="menuitem">
+              <a class="dropdown-item"
+                >Role: {{ (currentUser$ | async).roles }}</a
+              >
+            </li>
+            <li class="divider dropdown-divider"></li>
+            <li role="menuitem">
+              <a class="dropdown-item" (click)="logout()">Logout (v1.0.0)</a>
+            </li>
+          </ul>
+        </div>
       </div>
     </div>
   </div>
