--- a/loan.SPA/src/app/home/home.component.html
+++ b/loan.SPA/src/app/home/home.component.html
@@ -22,7 +22,7 @@
       </div>
       <div class="px-3">
         <input
-          type="text"
+          type="number"
           class="form-control"
           id="loanNumber"
           placeholder="Loan Number"
@@ -32,6 +32,7 @@
       <div class="mb-3">
         <button type="submit" class="btn btn-success me-2">Search</button>
         <button
+          *ngIf="(currentUser$ | async).roles.includes('Admin')"
           type="button"
           class="btn btn-primary"
           [routerLink]="['loan-create']"
